# wold3s

./: CMakeLists.txt  Makefile  README.md  author  wolf3d
Includes/: wolf3d.h
Srcs/: checker.c  drawing.c  exitcolors.c  main.c  moving.c  parsing.c  raycasting.c  read_map.c  textures.c
libft/: .#ft_lstdelone.c  .#libft.h  CMakeLists.txt  Makefile  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_count_letters.c  ft_count_word.c  ft_is_delimeter.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_push_back.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_till.c  (+32 more)
map/: big  medium  normal  t2  test  test3  test4  test6  test7
textures/: bluestone.xpm  bricks.xpm  bricksx64.xpm  colorstn.xpm  greystone.xpm  mossy.xpm  redbrick.xpm  slyth.xpm  wood.xpm
